# replicator

./: .env.example  .gitignore  README-zh.md  README.md  cli.py  graph.py  pyproject.toml  replicator.py  report.py  requirements.txt  setup_config.py  state.py  tasks.py
llm/: client.py  prompts.py
nodes/: analyze_code.py  clone_and_read.py  diagnose_error.py  execute_quick_run.py  gather_user_inputs.py  identify_key_files.py  plan_quick_run.py  setup_env.py
remote/: __init__.py  base.py  local.py  ssh.py
replicator_agent.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
