[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "replicator-agent"
version = "0.1.0"
description = "Autonomous ML paper reproduction agent"
requires-python = ">=3.11"
dependencies = [
    "langgraph>=0.2.0",
    "langgraph-checkpoint-sqlite>=1.0.0",
    "langchain>=0.2.0",
    "langchain-openai>=0.1.0",
    "langchain-anthropic>=0.1.0",
    "paramiko>=3.4.0",
    "python-dotenv>=1.0.0",
    "gitpython>=3.1.0",
    "rich>=13.0.0",
    "pydantic>=2.0.0",
    "typer>=0.9.0",
]

[project.scripts]
replicator = "cli:app"

[tool.setuptools]
py-modules = [
    "cli",
    "replicator",
    "graph",
    "state",
    "tasks",
    "setup_config",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["nodes*", "remote*", "llm*"]
